fix theme change animation not covering the whole page

--- a/src/style.css
+++ b/src/style.css
@@ -366,7 +366,7 @@ input[type="color"] {
   height: 0; } 
 }
 .switching--on {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 1;
